# attest.so

./: .claude-sync-config.json  .gitignore  .prettierrc  .release-it.json  .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  NAMING.md  README.md  SECURITY.md  commitlint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-it.json  telegram-webhook-plan.md
.changeset/: clear-bats-matter.md  common-crews-cross.md  (+18 more)
contracts/anchor/: Anchor.toml  Cargo.toml  package.json
contracts/anchor/programs/attestation/: Cargo.toml
contracts/anchor/programs/attestation/src/: registry.rs
contracts/anchor/programs/resolver/src/: lib.rs
contracts/anchor/programs/solana-attestation-service/: Cargo.toml
contracts/anchor/programs/solana-attestation-service/src/: authority.rs  lib.rs  registry.rs
contracts/anchor/tests/: _expect.ts  attestso.ts  solana-attestation-service.ts  solana_attestation_service.ts
contracts/solana-attest/programs/attestso/: Cargo.toml
contracts/solana-attest/programs/attestso/src/: attestation.rs  authority.rs  constants.rs  lib.rs  registry.rs
contracts/solana/programs/attestation/: Cargo.toml
contracts/solana/programs/attestation/src/: attestation.rs  constants.rs  consts.rs  errors.rs  events.rs  instructions.rs  lib.rs  sdk.rs  state.rs  utils.rs
contracts/solana/programs/attestation/src/instructions/: attest.rs  delegated_attest.rs  initialize.rs  revoke.rs
contracts/solana/programs/authority/: Cargo.toml
contracts/solana/programs/authority/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  sdk.rs  state.rs
contracts/solana/programs/authority/src/instructions/: initialize.rs  register_authority.rs
contracts/solana/programs/registry/: Cargo.toml
contracts/solana/programs/registry/src/: errors.rs  events.rs  instructions.rs  lib.rs  sdk.rs  state.rs  utils.rs
contracts/solana/programs/registry/src/instructions/: create_schema.rs  register_schema.rs
contracts/stellar/: .env.example  .env.example.sh  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Release.toml  contracts.json  deploy.sh  deployments.json  package-lock.json  package.json  readme.txt  tsconfig.json  vitest.config.ts
contracts/stellar/.cargo/: config.toml
contracts/stellar/__test__/: authority.integration.test.ts  contract-status.test.ts  delegated-attestation.integration.test.ts  delegated-attestation.test.ts  protocol-resolver.integration.test.ts  protocol.integration.test.ts  readme.md  test-utils.ts  testutils.ts
contracts/stellar/__test__/legacy/: protocol.integration.test.mjs  robust-invoke.mjs
contracts/stellar/attestation/: Cargo.toml
contracts/stellar/attestation/src/: lib.rs
contracts/stellar/audit/: ARCHITECTURE.md  AUTHORITY_STRIDE.md  LOC.md  PROTOCOL_STRIDE.md
contracts/stellar/authority/: Cargo.toml  Makefile  README.md
contracts/stellar/authority/src/: access_control.rs  errors.rs  events.rs  lib.rs  macros.rs  payment.rs  protocol_test.rs  protocol_test_original.rs  state.rs  test.rs  token_factory.rs  trusted_verifiers.rs  xtest.rs
contracts/stellar/authority/src/instructions/: admin.rs  admin_simple.rs  mod.rs  resolver.rs  resolver_simple.rs
contracts/stellar/authority/tests/: authority_management_and_withdrawals.rs  payment_and_admin_flow.rs
contracts/stellar/bindings/: README.md  authority.md  authority.ts  protocol.md
contracts/stellar/bindings/src/: authority.md  authority.ts  index.ts  protocol.md  protocol.ts  types.ts
contracts/stellar/contract/: Cargo.toml  Makefile
contracts/stellar/contract/src/: errors.rs  events.rs  lib.rs  resolver_interface.rs  schema.rs  state.rs  tests.rs  utils.rs
contracts/stellar/contract/src/instructions/: attest.rs  get_attest.rs  get_attestation.rs  initialize.rs  mod.rs  register_authority.rs  register_schema.rs  revoke.rs  revoke_attest.rs  schema.rs
contracts/stellar/contract/src/interfaces/: resolver.rs
contracts/stellar/protocol/: .gitignore  Cargo.toml  Makefile  README.md
contracts/stellar/protocol/src/: bls_research.rs  bls_tests.rs  errors.rs  events.rs  lib.rs  protocol_tests.rs  state.rs  tests.rs  utils.rs
contracts/stellar/protocol/src/instructions/: attest.rs  attestation.rs  crypto.rs  delegation.rs  mod.rs  revoke.rs  schema.rs
contracts/stellar/protocol/src/interfaces/: mod.rs  resolver.rs
contracts/stellar/protocol/tests/: __protocol_bls_gaffine_test.rs  attestation_and_query.rs  initialization_and_schema.rs  protocol_attestation_test.rs  protocol_cryptography_test.rs  protocol_delegation_test.rs  protocol_delegator_test.rs  protocol_initialization_and_schema.rs  protocol_resolver_test.rs  protocol_revocation_test.rs  revocation.rs  testutils.rs
contracts/stellar/resolver_interface/: Cargo.toml
contracts/stellar/resolver_interface/src/: lib.rs
contracts/stellar/resolvers/: Cargo.toml  FACTORY_PATTERN_GUIDE.md  Makefile  README.md
contracts/stellar/resolvers/default/: Cargo.toml
contracts/stellar/resolvers/default/src/: lib.rs
contracts/stellar/resolvers/fee_collection/: Cargo.toml
contracts/stellar/resolvers/fee_collection/src/: lib.rs
contracts/stellar/resolvers/src/: default.rs  factory.rs  fee_collection.rs  interface.rs  lib.rs  token_reward.rs
contracts/stellar/resolvers/tests/: default_resolver.rs  factory_test.rs  fee_collection_resolver.rs  token_reward.rs
contracts/stellar/resolvers/token_reward/: Cargo.toml
contracts/stellar/resolvers/token_reward/src/: lib.rs
contracts/stellar/schema/: Cargo.toml  Makefile
contracts/stellar/schema/src/: lib.rs  test.rs
contracts/stellar/scripts/: README.md  authority.mjs  protocol.mjs  run.js  run.mjs
contracts/stellar/src/: create_attestation.rs  create_schema.rs  query_attestation.rs  register_authority.rs  revoke_attestation.rs
contracts/stellar/test/: account-setup.mjs  authority.integration.test.mjs  authority.integration.test.ts  contract-status.test.ts  protocol.integration.test.mjs  protocol.integration.test.ts  readme.md  setup.mjs
contracts/stellar/test/legacy/: protocol.integration.test.mjs
(+322 files in other folders)
