[package]
name = "solana-attestation-service"
version = "0.1.0"
edition = "2018"

[lib]
name = "solana_attestation_service"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.16.7"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"
sha2 = "0.10.6" 

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.16.7"
