[workspace]
resolver = "2"

members = [
    "protocol",
    "authority",
]

[workspace.package]
version = "1.3.2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.7" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
