[package]
name = "protocol"
version = { workspace = true }
edition = "2021"
authors = ["Immutable Labs (Daccred) <gm@daccred.xyz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["base64"] }

[dev-dependencies]
serde_json = "1.0.111"
bls12_381 = "0.8.0"
