[package]
name = "protocol"
version = { workspace = true }
edition = "2021"
authors = ["Immutable Labs (Daccred) <gm@daccred.xyz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = [
  "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[dev-dependencies]
bls12_381 = "0.8.0"
blst = "0.3.0"
hex = "0.4.3"

