[package]
name = "protocol"
version = { workspace = true }
edition = "2021"
authors = ["Immutable Labs (Daccred) <gm@daccred.xyz>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
resolvers = { path = "../resolvers", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
bls12_381 = "0.8.0"
blst = "0.3.0"
hex = "0.4.3"

