[package]
name = "resolvers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-contracts-sdk = { version = "0.4.0", features = ["token"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }