[package]
name = "resolvers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

authors = []

[features]
export-contracts = []
default = ["export-contracts"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-macros = "0.4.1"
stellar-tokens = "0.4.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
