[package]
name = "attestso"
version = "0.1.0"
description = "Attestation Service Portal on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attestso"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"