[package]
name = "attestation"
version = "0.1.1"
description = "The core attestation service implementation for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_attestation_service"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# anchor-lang = "0.30.1"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-security-txt = "1.1.1"