[package]
name = "authority"
version = "0.1.1"
description = "Custom resolver impl we use to create verified authorities on top of our attestations service"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "authority_resolver"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1" }
solana-security-txt = "1.1.1"