[package]
name = "registry"
version = "0.1.0"
description = "Schema registry program for the attestation service"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "schema_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
solana-security-txt = "1.1.1"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
